force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Sales_Approach__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approach__c</fullName>
    <description>How will we approach the sales portion of this migration?</description>
    <label>Sales Approach</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PGL</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>