force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Services_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Services_Contract_Signed__c</fullName>
    <label>Services Contract Signed</label>
    <type>Date</type>
</CustomField>