force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Start_Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Issue__c</fullName>
    <label>Start Date of Issue</label>
    <type>Date</type>
</CustomField>