force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Status_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Status_Next_Steps__c</fullName>
    <description>SC-000022</description>
    <label>Status/Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>