force-app/main/default/objects/Product_Migration_Placeholder__c/fields/TFG_Opportunity_Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>TFG_Opportunity_Maintenance_Amount__c</fullName>
    <label>TFG Opportunity Maintenance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>