force-app/main/default/objects/Product_Migration_Placeholder__c/fields/TFG_Opportunity_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>TFG_Opportunity_Total_Revenue__c</fullName>
    <formula>TFG_Opportunity_License_Amount__c+
TFG_Opportunity_Maintenance_Amount__c+
TFG_Opportunity_Services_Amount__c</formula>
    <label>TFG Opportunity Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>