force-app/main/default/objects/Product_Migration_Placeholder__c/fields/TFG_Product__c.field-meta.xml
<CustomField>
    <fullName>TFG_Product__c</fullName>
    <label>TFG Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Analyze</fullName>
            </value>
            <value>
                <fullName>Analyze, Lateral Hire</fullName>
            </value>
            <value>
                <fullName>Analyze/Flow</fullName>
            </value>
            <value>
                <fullName>Analyze/Flow2</fullName>
            </value>
            <value>
                <fullName>Analyze/Protect</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Flow Express</fullName>
            </value>
            <value>
                <fullName>Flow/Analyze</fullName>
            </value>
            <value>
                <fullName>Flow/Analyze/Protect</fullName>
            </value>
            <value>
                <fullName>Lateral Hire</fullName>
            </value>
            <value>
                <fullName>Protect</fullName>
            </value>
            <value>
                <fullName>Protect/Analyze</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>